sample/misc/error/eval_wdt_selectable.bfr
codegen [
  $build { x } in
  + x:(1)hoge
]